--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ else ()
 endif()
 
 find_path(CLIB_UTIL_INCLUDE_DIRS "ClibUtil/utils.hpp")
+find_path(SRELL_INCLUDE_DIRS "srell.hpp")
 
 # ---- Add source files ----
 
@@ -185,6 +186,7 @@ target_include_directories(
 		${CMAKE_CURRENT_BINARY_DIR}/include
 		${CMAKE_CURRENT_SOURCE_DIR}/src
 		${CLIB_UTIL_INCLUDE_DIRS}
+		${SRELL_INCLUDE_DIRS}
 )
 
 target_link_libraries(
