--- a/Skyrim/SKSE/Plugins/po3_ItemEquipRestrictor.ini
+++ b/Skyrim/SKSE/Plugins/po3_ItemEquipRestrictor.ini
@@ -1,20 +1,73 @@
+﻿[RestrictEquipItem]
+bShowNotification = true
 ;You cannot equip {item} -> You cannot equip Ebony Armor
-
-[Restrict]
-bShowNotification = true
 sNotificationGeneric = You cannot equip this item
-sNotificationSpellGeneric = You cannot cast this spell
 sNotificationSkill = You lack the necessary skill to equip this item
-sNotificationSpellSkill = You lack the necessary skill to cast this spell
 sNotificationLevel = You lack the necessary level to equip this item
-sNotificationSpellLevel = You lack the necessary level to cast this spell
 
 
-[Debuff]
+[RestrictEquipItemDebuff]
 bShowNotification = true
-sNotificationGeneric = You cannot equip this item
-sNotificationSpellGeneric = You cannot cast this spell
+sNotificationGeneric = You cannot properly equip this item
 sNotificationSkill = You lack the necessary skill to properly equip this item
-sNotificationSpellSkill = You lack the necessary skill to properly cast this spell
 sNotificationLevel = You lack the necessary level to properly equip this item
-sNotificationSpellLevel = You lack the necessary level to properly cast this spell
+
+
+[RestrictEquipSpell]
+bShowNotification = true
+;You cannot equip {spell} -> You cannot equip Flames
+sNotificationGeneric = You cannot equip this spell
+sNotificationSkill = You lack the necessary skill to equip this spell
+sNotificationLevel = You lack the necessary level to equip this spell
+
+
+[RestrictEquipSpellDebuff]
+bShowNotification = true
+sNotificationGeneric = You cannot properly equip this spell
+sNotificationSkill = You lack the necessary skill to properly equip this spell
+sNotificationLevel = You lack the necessary level to properly equip this spell
+
+
+[RestrictEquipShout]
+bShowNotification = true
+;You cannot equip {shout} -> You cannot equip Unrelenting Force
+sNotificationGeneric = You cannot equip this shout
+sNotificationSkill = You lack the necessary skill to equip this shout
+sNotificationLevel = You lack the necessary level to equip this shout
+
+
+[RestrictEquipShoutDebuff]
+bShowNotification = true
+sNotificationGeneric = You cannot properly equip this shout
+sNotificationSkill = You lack the necessary skill to properly equip this shout
+sNotificationLevel = You lack the necessary level to properly equip this shout
+
+
+[RestrictCast]
+bShowNotification = true
+;You cannot cast {magicItem} -> You cannot cast Flames
+sNotificationGeneric = You cannot cast this spell
+sNotificationSkill = You lack the necessary skill to cast this spell
+sNotificationLevel = You lack the necessary level to cast this spell
+
+
+[RestrictCastDebuff]
+bShowNotification = true
+sNotificationGeneric = You cannot properly cast this spell
+sNotificationSkill = You lack the necessary skill to properly cast this spell
+sNotificationLevel = You lack the necessary level to properly cast this spell
+
+
+[RestrictPickUp]
+bShowNotification = true
+;You cannot pick up {item} -> You cannot pick up Ebony Armor
+sNotificationGeneric = You cannot pick up this item
+sNotificationSkill = You lack the necessary skill to pick up this item
+sNotificationLevel = You lack the necessary level to pick up this item
+
+
+[RestrictPickUpDebuff]
+bShowNotification = true
+sNotificationGeneric = You cannot properly pick up this item
+sNotificationSkill = You lack the necessary skill to properly pick up this item
+sNotificationLevel = You lack the necessary level to properly pick up this item
